[build-system]
requires = ["hatchling"]  # Hatchling as the build backend
build-backend = "hatchling.build"

[project]
name = "viszer"  # Package name
version = "0.1.0"          # Package version
description = "An simple Python package for data visualization"
readme = "README.md"       # Path to the README file
license = "MIT"
authors = [
    {name = "Runqiu Bao", email = "bao@robot.t.u-tokyo.ac.jp"}
]
dependencies = [
    "scipy",
    "open3d",
    "numpy"
]          # List dependencies here (e.g., requests, numpy)
keywords = ["visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"  # Specify Python version compatibility

[project.scripts]
trajviz = "viszer.trajviz:main"

[tool.hatch.metadata]
allow-direct-references = true  # Optional: for direct dependency references